src/test/ui/try-on-option.stderr
error[E0277]: `?` couldn't convert the error to `()`
  --> $DIR/try-on-option.rs:7:6
   |
LL |     x?;
   |      ^ the trait `std::convert::From<std::option::NoneError>` is not implemented for `()`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = note: required by `std::convert::From::from`

error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option.rs:13:5
   |
LL |     x?;
   |     ^^ cannot use the `?` operator in a function that returns `u32`
   |
   = help: the trait `std::ops::Try` is not implemented for `u32`
   = note: required by `std::ops::Try::from_error`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
